Se optimizan todas las imagenes, Se añaden animaciones de animate.js, y se añaden elementos a los proyectos destacados y al stack

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Juan Camilo Salazar Serna</title>
@@ -8,8 +9,11 @@
   <link rel="icon" type="image/x-icon" href="assets/controllerIcon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
